# obs-streamelements-bootstrap

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  catalog-info.yaml  mkdocs.yml  obs-streamelements-bootstrap-plugin.cpp  utils.hpp
docs/: index.md
